Fix navbar dropdown on tablet

--- a/assets/sass/utils/typography.sass
+++ b/assets/sass/utils/typography.sass
@@ -1,4 +1,5 @@
 @import "open-color.scss"
+@import "responsiveness.sass"
 
 $header-font-color: $oc-gray-9
 
@@ -15,18 +16,19 @@ $header-font-color: $oc-gray-9
   color: $header-font-color
   font-weight: bold
 
-.h1
-  font-size: 2.25em
-.h2
-  font-size: 1.75em
-.h3
-  font-size: 1.5em
-.h4
-  font-size: 1.25em
-.h5
-  font-size: 1em
-.h6
-  font-size: .875em
++desktop
+  .h1
+    font-size: 2.25em
+  .h2
+    font-size: 1.75em
+  .h3
+    font-size: 1.5em
+  .h4
+    font-size: 1.25em
+  .h5
+    font-size: 1em
+  .h6
+    font-size: .875em
 
 .fc-inherit
   color: inherit
